--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
     <head>
         <title>Choropleth-Map</title>
         <link rel="stylesheet" href="style.css">
+
+
+
     </head>
 
     <body>
-        <script src="https://d3js.org/d3.v6.min.js"></script>
 
+        <script src="https://d3js.org/d3.v4.min.js"></script>
+        <script src="https://d3js.org/topojson.v2.min.js"></script>
+        <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
         <script src ="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+
 
         <div id="title">Choropleth map displaying some stats about USA educational attainment</div>
 
         <div id="description">Percentage of adults age 25 and older with a bachelor's degree or higher (2010-2014)</div>
 
-        <svg width="1200" height="500"></svg>
+
 
         <script src="map.js"></script>
 
