--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="https://d3js.org/topojson.v2.min.js"></script>
         <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-        <script src ="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <!-- <script src ="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 
 
 
@@ -23,7 +23,47 @@
 
 
 
-        <script src="map.js"></script>
+        <!-- <script src="map.js"></script> -->
+        <script>
+            var width = 720;
+var height = 500;
+
+// var projection = d3.geoAlbers()
+//     .scale(1000)
+//     .translate([width / 2, height/2]);
+
+// var path = d3.geoPath()
+//     .projection(projection);
+
+var svg = d3.select("body").append("svg")
+    .attr("width", width)
+    .attr("height",height);
+
+
+
+
+
+d3.queue()
+    .defer(d3.json,'https://cdn.freecodecamp.org/testable-projects-fcc/data/choropleth_map/counties.json')
+    .await(ready)
+
+
+    function ready(error,us) {
+
+
+        console.log(us.objects.counties)
+        if (error) throw error;
+    
+        svg.append("g")
+            .attr("class", "counties")
+            .selectAll("path")
+                .data(topojson.feature(us,us.objects.counties.geometries).features)
+            .enter().append("path")
+                .attr("class","county")
+                .style("fill","white")
+                .style("stroke","black");
+    }
+        </script>
 
     </body>
 
