--- a/test.html
+++ b/test.html
@@ -29,8 +29,8 @@ var svg = d3.select("body").append("svg")
     .attr("height", height);
 
 d3.queue()
-    .defer(d3.json, "http://duspviz.mit.edu/_assets/data/us.json")
-    .defer(d3.json, "http://duspviz.mit.edu/_assets/data/us.json")
+    .defer(d3.json, "https://cdn.freecodecamp.org/testable-projects-fcc/data/choropleth_map/counties.json")
+    .defer(d3.json, "https://cdn.freecodecamp.org/testable-projects-fcc/data/choropleth_map/counties.json")
     .await(ready);
 
 function ready(error, us) {
